<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Apps Manager</string>
    <string name="app_settings">Settings</string>
    <string name="actionbar_uninstall">Uninstall</string>
    <string name="actionbar_share">Share app</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- メニュー -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_sort">Sort</string>
    <string name="action_view_as_list">View as list</string>
    <string name="action_view_as_grid">View as grid</string>
    <string name="action_share">Share</string>
    <string name="action_uninstall">Uninstall</string>

    <!-- アクションモードのタイトル -->
    <string name="title_actionmode">Selected apps</string>
    <string name="actionmode_selected_count">%1$d apps</string>

    <!-- ダイアログのタイトル -->
    <string name="title_dialog_sort">Sort Apps</string>
    <string name="title_dialog_beam">Select share apps</string>

    <!-- プレファレンス -->
    <string name="pref_category_contact">Contact</string>
    <string name="pref_contact_title">Send requests and comments</string>
    <!-- メール -->
    <string name="mail_address">Kumagai.Shinya@gmail.com</string>
    <string name="mail_subject">Apps Manager requests and comments</string>

    <!-- View -->
    <string name="display_version_format">version : %1s</string>

    <!-- Misc -->
    <string name="empty_text_apps">No apps</string>

</resources>
