<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    tools:context="com.droibit.appsmanager2.MainActivity" >

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:orderInCategory="200"
        android:showAsAction="never" />

    <item android:id="@+id/action_view_as_grid"
        android:title="@string/action_view_as_grid"
        android:orderInCategory="300"
        android:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="400"
        android:showAsAction="never" />
</menu>
