<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.droibit.appsmanager.MainActivity" >

    <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="always" />

    <item android:id="@+id/action_sort"
        android:icon="@drawable/ic_action_sort_by_size"
        android:title="@string/action_sort"
        android:orderInCategory="200"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_view_as_list"
        android:icon="@drawable/ic_action_view_as_list"
        android:title="@string/action_view_as_list"
        android:orderInCategory="300"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="400"
        android:showAsAction="never" />
</menu>
